@@ -8,11 +8,14 @@ p = subprocess.Popen("cmake pyqpp",
                      stdout=subprocess.PIPE,
                      stderr=subprocess.STDOUT)
 
-prefix = "Detecting Eigen3 - done in "
+prefix = "Detecting Eigen3 - done (in "
 eigen_path = None
+print("Running cmake pyqpp")
 for line in p.stdout.read().decode('ascii').split('\n'):
-    if line.startswith(prefix):
-        eigen_path = line[len(prefix):]
+    print(line)
+    pos = line.find(prefix)
+    if pos != -1:
+        eigen_path = line[pos + len(prefix):-1]
         break
 
 if eigen_path is None:
